[package]
name = "drm-sys"
description = "Bindings to the Direct Rendering Manager API"
version = "0.0.0"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
build = "build.rs"

[dependencies]
libc = "*"

[build-dependencies]
bindgen = { version = "0.53.2", optional = true }
pkg-config = { version = "*", optional = true }
